add --enable-preview flag
Signed-off-by: Ludovic Orban <lorban@bitronix.be>